--- a/contents/webscrape/bs4soup-extract-table.ipynb
+++ b/contents/webscrape/bs4soup-extract-table.ipynb
@@ -283,6 +283,250 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e293658",
+   "metadata": {},
+   "source": [
+    "## Scrape from Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "36a4fd76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<table class=\"data-table\" id=\"employee-table\">\n",
+       "<thead>\n",
+       "<tr>\n",
+       "<th>Name</th>\n",
+       "<th>Department</th>\n",
+       "<th>Salary</th>\n",
+       "<th>Years of Experience</th>\n",
+       "</tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "<tr>\n",
+       "<td>John Smith</td>\n",
+       "<td>Engineering</td>\n",
+       "<td>$75,000</td>\n",
+       "<td>5</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>Sarah Johnson</td>\n",
+       "<td>Marketing</td>\n",
+       "<td>$65,000</td>\n",
+       "<td>3</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>Mike Wilson</td>\n",
+       "<td>Sales</td>\n",
+       "<td>$70,000</td>\n",
+       "<td>7</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "<td>Lisa Brown</td>\n",
+       "<td>HR</td>\n",
+       "<td>$60,000</td>\n",
+       "<td>2</td>\n",
+       "</tr>\n",
+       "</tbody>\n",
+       "</table>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup1 = BeautifulSoup(html_content, 'html.parser')\n",
+    "soup1_table = soup1.find('table', {'id': 'employee-table'})\n",
+    "soup1_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bac5f401",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bs4\n",
+    "\n",
+    "def bs4_table_to_df(bs4table: bs4.element.Tag):\n",
+    "    \"\"\"Transform a single bs4 table to a dataframe\"\"\"\n",
+    "    # Extract headers (Column Name)\n",
+    "    headers = []\n",
+    "    header_row = bs4table.find(\"thead\").find(\"tr\")\n",
+    "    for th in header_row.find_all(\"th\"):\n",
+    "        headers.append(th.text.strip())  # strip() removes whitespace\n",
+    "\n",
+    "    # Extract data rows\n",
+    "    rows_data = []\n",
+    "    tbody = bs4table.find(\"tbody\")\n",
+    "    for row in tbody.find_all(\"tr\"):\n",
+    "        row_data = []\n",
+    "        for td in row.find_all(\"td\"):\n",
+    "            row_data.append(td.text.strip())\n",
+    "        rows_data.append(row_data)\n",
+    "\n",
+    "    # Create DataFrame\n",
+    "    df = pd.DataFrame(rows_data, columns=headers)\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "afece6f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Name",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Department",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Salary",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Years of Experience",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "9963bb28-7d09-4aad-8cd5-e34e37268592",
+       "rows": [
+        [
+         "0",
+         "John Smith",
+         "Engineering",
+         "$75,000",
+         "5"
+        ],
+        [
+         "1",
+         "Sarah Johnson",
+         "Marketing",
+         "$65,000",
+         "3"
+        ],
+        [
+         "2",
+         "Mike Wilson",
+         "Sales",
+         "$70,000",
+         "7"
+        ],
+        [
+         "3",
+         "Lisa Brown",
+         "HR",
+         "$60,000",
+         "2"
+        ]
+       ],
+       "shape": {
+        "columns": 4,
+        "rows": 4
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Years of Experience</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>John Smith</td>\n",
+       "      <td>Engineering</td>\n",
+       "      <td>$75,000</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sarah Johnson</td>\n",
+       "      <td>Marketing</td>\n",
+       "      <td>$65,000</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mike Wilson</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>$70,000</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lisa Brown</td>\n",
+       "      <td>HR</td>\n",
+       "      <td>$60,000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Name   Department   Salary Years of Experience\n",
+       "0     John Smith  Engineering  $75,000                   5\n",
+       "1  Sarah Johnson    Marketing  $65,000                   3\n",
+       "2    Mike Wilson        Sales  $70,000                   7\n",
+       "3     Lisa Brown           HR  $60,000                   2"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bs4_table_to_df(soup1_table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "935ed31e",
    "metadata": {},
    "source": [
